// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<AudioDramaToggle /> Expect to match snapshot for drama audio 1`] = `
<DocumentFragment>
  <div
    class="audio-drama-toggle-container"
  >
    <button
      class="audio-drama-toggle-button active"
      id="drama-button"
      title="Drama"
      type="button"
      value="audio_drama"
    >
      Drama
    </button>
    <button
      class="audio-drama-toggle-button"
      id="non-drama-button"
      title="Non-Drama"
      type="button"
      value="audio"
    >
      Non-Drama
    </button>
  </div>
</DocumentFragment>
`;

exports[`<AudioDramaToggle /> Expect to match snapshot for only drama audio available 1`] = `
<DocumentFragment>
  <div
    class="audio-drama-toggle-container"
  >
    <button
      class="audio-drama-toggle-button active"
      id="drama-button"
      title="Drama"
      type="button"
      value="audio_drama"
    >
      Drama
    </button>
    <button
      class="audio-drama-toggle-button disabled"
      id="non-drama-button"
      title="Non-Drama"
      type="button"
      value="audio"
    >
      Non-Drama
    </button>
  </div>
</DocumentFragment>
`;

exports[`<AudioDramaToggle /> Expect to match snapshot for only plain audio available 1`] = `
<DocumentFragment>
  <div
    class="audio-drama-toggle-container"
  >
    <button
      class="audio-drama-toggle-button active disabled"
      id="drama-button"
      title="Drama"
      type="button"
      value="audio_drama"
    >
      Drama
    </button>
    <button
      class="audio-drama-toggle-button"
      id="non-drama-button"
      title="Non-Drama"
      type="button"
      value="audio"
    >
      Non-Drama
    </button>
  </div>
</DocumentFragment>
`;

exports[`<AudioDramaToggle /> Expect to match snapshot for plain audio 1`] = `
<DocumentFragment>
  <div
    class="audio-drama-toggle-container"
  >
    <button
      class="audio-drama-toggle-button"
      id="drama-button"
      title="Drama"
      type="button"
      value="audio_drama"
    >
      Drama
    </button>
    <button
      class="audio-drama-toggle-button active"
      id="non-drama-button"
      title="Non-Drama"
      type="button"
      value="audio"
    >
      Non-Drama
    </button>
  </div>
</DocumentFragment>
`;
